fix(knp-25): fix width on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -82,7 +82,6 @@ html {
     width: 100vw;
     height: 100%;
     overflow: hidden auto;
-    overflow-x: hidden;
     scroll-behavior: smooth;
 
     * {
@@ -108,6 +107,11 @@ input {
 
 #root {
     height: 100%;
+
+    > * {
+        max-width: 100vmax;
+        overflow-x: hidden;
+    }
 }
 
 input,
